--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "recharts": "^3.0.2",
     "jspdf": "2.5.1",
     "html2canvas": "1.4.1",
-    "jspdf-autotable": "3.8.2"
+    "jspdf-autotable": "3.8.2",
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
